# Student-Study-Portal

./: .gitignore  Pipfile  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
portal/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
portal/migrations/: 0001_initial.py  0002_note_important.py  0002_todo_is_completed.py  0003_profile.py  0003_remove_todo_datecompleted.py
portal/templates/account/: login.html  profile.html  signup.html
portal/templates/portal/: books.html  dictionary.html  home.html  wiki.html  youtube.html
portal/templates/portal/notes/: CreateNote.html  DeleteNote.html  NoteDetail.html  UpdateNote.html  note.html  viewnotes.html
portal/templates/portal/todos/: CreateToDo.html  UpdateToDo.html  viewtodos.html
static/: styles.css
studyportal/: celery.py  localsettings.py  settings.py  urls.py
studyportal/static/: styles.css  youtube.jfif
studyportal/templates/: base.html  messages.html
