[tool.poetry]
name = "studyportal_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.18"
django-allauth = "0.45.0"
pillow = "^10.0.0"
cloudinary = "^1.34.0"
celery = "^5.3.4"
django-environ = "^0.11.2"
dj-database-url = "^2.1.0"
django-tinymce = "^3.6.1"
django-autoslug = "^1.9.9"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-celery-results = "^2.5.1"
django-cloudinary-storage = "^0.3.0"
wikipedia-api = "^0.6.0"
xhtml2pdf = "^0.2.11"
youtube-search-python = "^1.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
